[package]
name = "exec"
version = "0.1.0"
authors = ["Martin Algesten <martin@algesten.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-io = "0.3"
futures-executor = "0.3"
futures-task = "0.3"
mio = { version = "0.7", features = ["os-poll", "tcp"] }
thread_local = "1"
